--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -61,12 +61,11 @@
           https://github.com/{{ site.github.username }}
         {%- elsif entry.type == 'twitter' -%}
           https://twitter.com/{{ site.twitter.username }}
+        {%- elsif entry.type == 'linkedin' -%}
+          https://linkedin.com/in/{{ site.linkedin.username }}
         {%- elsif entry.type == 'email' -%}
           {% assign email = site.social.email | split: '@' %}
           javascript:location.href = 'mailto:' + ['{{ email[0] }}','{{ email[1] }}'].join('@')
-        {%- elsif entry.type == 'rss' -%}
-          {{ "/feed.xml" | relative_url }}
-        {%- else -%}
           {{ entry.url }}
         {%- endif -%}
       {% endcapture %}
